# DataHandling

./: .gitignore  README.md  pyproject.toml
notebook/: EDA_Notebook.ipynb  LGBM_baseline.ipynb  TMDB_EDA.ipynb
