[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "1.23.3"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
plotly = "^5.11.0"
jupyter = "^1.0.0"
ipykernel = "^6.21.1"
lightgbm = "^3.3.5"
polars = "^0.16.14"
kaggle = "^1.5.13"
squarify = "^0.4.3"
pywaffle = "^1.1.0"
llvmlite = "^0.39.1"
shap = "^0.41.0"
lime = "^0.2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
pyproject-flake8 = "5.0.4"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-eradicate = "^1.4.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__",]
max-complexity = 10
